<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="distancia">Distancia</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="calcular">Calcular</string>
    <string name="valores_validos">Digite apenas valores númericos!</string>
    <string name="total_de_quilometros">Total de Quilômetros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="kms_por_litro">Kms por litro</string>
    <string name="seu_gasto_total_sera_de">seu gasto total será de:</string>
</resources>
