<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/editDistance"
            style="@style/TextAppearence"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/distancia" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/total_de_quilometros"
            android:textAllCaps="true"
            android:textColor="@color/collorDarkGray"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editPrice"
            style="@style/TextAppearence"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/preco" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/preco_por_litro"
            android:textAllCaps="true"
            android:textColor="@color/collorDarkGray"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editAutonomy"
            style="@style/TextAppearence"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/autonomia" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/kms_por_litro"
            android:textAllCaps="true"
            android:textColor="@color/collorDarkGray"
            android:textSize="10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/seu_gasto_total_sera_de"
            android:textAllCaps="true"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="0.00"
            android:textAllCaps="true"
            android:textColor="#fd6a6a"
            android:textSize="35sp" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="20dp"
            android:textAllCaps="true"
            android:textColorHint="@color/collorLightGray"
            android:textSize="20sp"
            android:background="@drawable/round_btn"
            android:text="@string/calcular" />

    </LinearLayout>



</ScrollView>